--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 flask   
 requests
+json
 flask_bcrypt
 flask_sqlalchemy==2.4.4
 sqlalchemy==1.3.23
-python-dotenv
-gunicorn
+email
+sqlite3
+smtplib
